--- a/src/style/components/_detailRealisation.scss
+++ b/src/style/components/_detailRealisation.scss
@@ -36,6 +36,9 @@
 
   &__table{
     padding: 0 11px 0 11px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   &__description{
