--- a/src/style/components/_card.scss
+++ b/src/style/components/_card.scss
@@ -116,7 +116,7 @@
     }
 
     &__tags {
-        background-color: variables.$primary_color;
+        background-color: variables.$secondary-color;
         border-radius: 5px;
         text-transform: uppercase;
         text-align: center;
