--- a/src/style/pages/_apropos.scss
+++ b/src/style/pages/_apropos.scss
@@ -117,14 +117,45 @@
 
   &__telechargement{
     display: flex;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
     margin: auto;
-    padding: 35px 120px 35px 120px;
+    padding-top: 15px;
     @include mixins.mobile {
-      padding: 35px 50px 35px 50px;
+      padding: 35px 50px 15px 50px;
+    }
   }
+
+  &__cvContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 40px;
+  }
+
+  &__cv{
+    width: 12%;
+    display: flex;
+    margin: auto;
+    text-align: center;
+    padding-bottom: 10px;
+    @include mixins.mobile {
+      width: 42%;
+      padding-bottom: 0;
+    }
   }
 }
 
+
+.aPropos__cvParagraph{
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  margin: auto;
+  color: variables.$secondary-color;
+}
 
 .softSkills {
   display: flex;
