--- a/src/style/pages/_apropos.scss
+++ b/src/style/pages/_apropos.scss
@@ -91,8 +91,8 @@
     display: flex;
     flex-direction: column;
     background-color: variables.$secondary-color;
-    height: 452px;
-    padding: 35px 120px 25px 120px;
+    height: auto;
+    padding: 35px 120px 35px 120px;
 
     @include mixins.mobile {
       flex-wrap: wrap;
