--- a/src/style/pages/_contact.scss
+++ b/src/style/pages/_contact.scss
@@ -47,7 +47,7 @@
 .contact__formAndPicture{
   display: flex;
   width: 100%;
-  height: 510px;
+  height: 70vh;
   margin-top: 15px;
   position: relative;
   overflow-y: hidden;
