--- a/src/style/pages/_home.scss
+++ b/src/style/pages/_home.scss
@@ -29,17 +29,19 @@
 .mainContent__image{
   display: flex;
   position: absolute;
-  top: 2%;
+  top: -19%;
   right: -29%;
   z-index: -1;
   width: 81%;
     @include mixins.mobile {
-        width: 238%;
+        width: 132%;
         padding-left: 0;
         padding-right: 0;
-        order:2;
+        order: 2;
+        top: 0;
         right: 0%;
         bottom: 0%;
+        height: 450px;
     }
 }
 
