--- a/src/style/pages/_home.scss
+++ b/src/style/pages/_home.scss
@@ -7,7 +7,7 @@
     height: auto;
     width: 100%;
     @include mixins.mobile {
-        padding: 0 10px 0 10px;
+        padding: 0;
         height: 56vh;
     }
 }
@@ -21,8 +21,8 @@
     height: 80vh;
     align-items: center;
     @include mixins.mobile {
-        padding-left: 5px;
-        height: 43vh;
+        padding-left: 15px;
+        height: 337px;
     }
 }
 
@@ -34,7 +34,7 @@
   z-index: -1;
   width: 81%;
     @include mixins.mobile {
-        width: 132%;
+        width: 151%;
         padding-left: 0;
         padding-right: 0;
         order: 2;
@@ -54,7 +54,7 @@
 
 .mainContent__cover{
     position: absolute;
-    border-top-right-radius: 15px;
+    //border-top-right-radius: 15px;
     top: 0;
     left: 0;
     right: 0;
