--- a/src/style/components/_cardTechnicalSkills.scss
+++ b/src/style/components/_cardTechnicalSkills.scss
@@ -28,6 +28,7 @@
         margin-left: 5px;
         margin-right: 5px;
         height: 90px;
+        width: 100%;
         @include mixins.mobile{
             height: 69px;
         }
