--- a/src/style/pages/_home.scss
+++ b/src/style/pages/_home.scss
@@ -40,7 +40,7 @@
         order: 2;
         right: 0%;
         bottom: 0%;
-        height: 50vh;
+        height: 415px;
     }
 }
 
@@ -48,7 +48,7 @@
     width: 80%;   
     @include mixins.mobile {
        width: 100%;
-       height: 50vh;
+       height: 415px;
     }
 }
 
