--- a/src/style/components/_cardExperiencePro.scss
+++ b/src/style/components/_cardExperiencePro.scss
@@ -15,6 +15,9 @@
     transition: transform 200ms ease-in-out;
     transform: scale(1.02);
   }
+  @include mixins.tablet{
+    width: 48%;
+  }
   @include mixins.mobile {
     width: 100%;
   }
