--- a/src/style/components/_cardTechnicalSkills.scss
+++ b/src/style/components/_cardTechnicalSkills.scss
@@ -13,9 +13,13 @@
     margin: 15px;
     height: 146px;
     transition: transform ease-in-out 200ms;
+    @include mixins.tablet{
+        max-width: 13%;
+    }
     @include mixins.mobile{
+        max-width: 14%;
         margin: 5px;
-        padding: 23px;
+        padding: 23px 15px 23px 15px;
         height: 100px;
     }
 
@@ -29,7 +33,11 @@
         margin-right: 5px;
         height: 90px;
         width: 100%;
+        @include mixins.tablet{
+            width: 92%;
+        }
         @include mixins.mobile{
+            width: 100%;
             height: 69px;
         }
     }
