--- a/src/style/components/_skills.scss
+++ b/src/style/components/_skills.scss
@@ -21,7 +21,7 @@
     left: -56px;
     top: 0;
     z-index: 999;
-    @include mixins.mobile {
+    @include mixins.tablet {
         display: none;
     }
 }
@@ -56,9 +56,13 @@
     position: relative;
     overflow: hidden;
     flex-wrap: wrap;
+    @include mixins.tablet{
+        width: 100%;
+        padding: 35px 15px 35px 15px;
+    }
     @include mixins.mobile {
         width: 100%;
-        min-height: 960px;
+        min-height: 817px;
         padding: 35px 10px 5px 10px;
     }
         &:hover{
@@ -75,9 +79,12 @@
             width: 100%;
             height: 250px;
             align-items: center;
+            @include mixins.tablet{
+                justify-content: center;
+            }
             @include mixins.mobile {
                 height: 200px;
-                width: 120%;
+                width: 95%;
             }
         }
 
