--- a/src/style/pages/_home.scss
+++ b/src/style/pages/_home.scss
@@ -26,7 +26,7 @@
     }
     @include mixins.mobile {
         padding-left: 15px;
-        height: 333px;
+        height: 402px;
     }
 }
 
@@ -51,7 +51,7 @@
         order: 2;
         right: 0%;
         bottom: 0%;
-        height: 459px;
+        height: 61vh;
     }
 }
 
@@ -62,7 +62,7 @@
         height: 700px;
     }
     @include mixins.mobile {
-        height: 459px;
+        height: 61vh;
     }
 }
 
